...
    final AppLocalizations l10n = AppLocalizations.of(context)!;
    game.l10n = l10n;
    return Scaffold(
      body: Stack(
        children: [
          GameWidget<YachtMasterGame>(
            key: const Key('yacht_game_widget'),
            game: game,
            overlayBuilderMap: {
              'MooringMenu': (context, game) => ListenableBuilder(
                listenable: game.mooringOverlayNotifier,
                builder: (context, _) => MooringOverlay(game: game),
              ),
...
